# dbman

./: .dockerignore  .release-please-manifest.json  .semrelrc  CHANGELOG.md  Cargo.toml  Dockerfile  readme.md  release-please-config.json
.github/: renovate.json5
.github/workflows/: docker.yml  release-please.yml  release.yml  rust.yml
charts/dbman/: Chart.yaml  artifacthub-repo.yaml  artifacthub-repo.yml  values.yaml
charts/dbman/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/dbman/templates/tests/: test-connection.yaml
src/: condition.rs  controller.rs  crdgen.rs  credentials.rs  database_server.rs  dbc.rs  heritage.rs  lib.rs  main.rs  v1alpha1.rs  v1alpha2.rs  v1alpha3.rs
tests/: db_recreate.rs  extra_db_bug.rs  integration_tests.rs  prepare.rs
tests/common/: mod.rs
yaml/: app.yaml
