[package]
name = "dbman"
version = "0.123.2"
edition = "2021"
default-run = "controller"
authors = ["hef"]
resolver = "2"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
async-recursion = "1.0.5"
clap = { version = "4.5.2", features = ["derive", "env"] }
env_logger = "0.11.3"
futures = "0.3.30"
k8s-openapi = { version = "0.21.1", features = ["v1_27"] }
kube = { version = "0.88.1", default-features = false, features = ["runtime", "derive", "client", "rustls-tls", "ws"] } #todo: ws in only required in dev
log = "0.4.21"
postgres-protocol = "0.6.6"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"

[features]
default = []
test-utils = []

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "process", "rt-multi-thread"] }
http = "1.1.0"
reqwest = { version = "0.11.25", features = ["json"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
dbman = { path = ".", features = ["test-utils"] }


[profile.release]
lto = true
codegen-units=1
